<resources>
    <string name="app_name">ButtonCLickAway</string>
    <string name="entername">Enter Name</string>
    <string name="phoneno">Phone No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="wallet">wallets</string>
    <string name="extras">Extras</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>