<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"/>

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_baseline_account_balance_wallet_24"
            android:title="@string/wallet"/>
    </group>
    <item android:title="@string/extras">

        <menu>

            <item
                android:id="@+id/nav_offer"
                android:icon="@drawable/ic_local"
                android:title="@string/profile"/>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/settings"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>